--- a/src/yarp/wwwroot/index.html
+++ b/src/yarp/wwwroot/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>API Gateway Frontend</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
 <body>
   <tw-root></tw-root>
-<script src="runtime-es2015.66c79b9d36e7169e27b0.js" type="module"></script><script src="runtime-es5.66c79b9d36e7169e27b0.js" nomodule defer></script><script src="polyfills-es5.6e1055b712d0b250b19e.js" nomodule defer></script><script src="polyfills-es2015.6022d6f28e0500e60d30.js" type="module"></script><script src="main-es2015.7115ad4e632e456ff9c7.js" type="module"></script><script src="main-es5.7115ad4e632e456ff9c7.js" nomodule defer></script></body>
+<script src="runtime-es2015.681bd8a4edb177c86959.js" type="module"></script><script src="runtime-es5.681bd8a4edb177c86959.js" nomodule defer></script><script src="polyfills-es5.7d306c69cd53c603c407.js" nomodule defer></script><script src="polyfills-es2015.8efe633f8934637015d4.js" type="module"></script><script src="main-es2015.71eb6e1314fb54ad84f5.js" type="module"></script><script src="main-es5.71eb6e1314fb54ad84f5.js" nomodule defer></script></body>
 </html>
